Mejoras UI eliminatorias y actualización de resultados

--- a/src/app/components/eliminatorias/eliminatorias-equipos/eliminatorias-equipos.component.css
+++ b/src/app/components/eliminatorias/eliminatorias-equipos/eliminatorias-equipos.component.css
@@ -1,7 +1,7 @@
 /* Title */
 .background {
-  background: #DC143C;
-  background-image: url('/assets/images/banners/background-pattern.svg');
+  background: #5c0f6b;
+  background-image: url('/assets/images/banners/background-pattern-eliminatorias.svg');
   background-size: cover;
   height: 250px;
 }
@@ -12,7 +12,7 @@
 /* Page Tree */
 .arrow {
   padding: 40px 12px;
-  color: #ffbaba;
+  color: #d4baff;
   font-weight: bold;
 }
 .arrow span {
@@ -34,8 +34,8 @@
 }
 /* Divider */
 .divider {
-  background: #DC143C;
-  background-image: url('/assets/images/banners/background-pattern.svg');
+  background: #5c0f6b;
+  background-image: url('/assets/images/banners/background-pattern-eliminatorias.svg');
   background-size: cover;
   height: 20px;
 }
