--- a/src/app/components/eliminatorias/eliminatorias-tecnicos/eliminatorias-tecnicos.component.css
+++ b/src/app/components/eliminatorias/eliminatorias-tecnicos/eliminatorias-tecnicos.component.css
@@ -1,7 +1,7 @@
 /* Title */
 .background {
-  background: #DC143C;
-  background-image: url('/assets/images/banners/background-pattern.svg');
+  background: #5c0f6b;
+  background-image: url('/assets/images/banners/background-pattern-eliminatorias.svg');
   background-size: cover;
   height: 250px;
 }
@@ -12,7 +12,7 @@
 /* Page Tree */
 .arrow {
   padding: 40px 12px;
-  color: #ffbaba;
+  color: #d4baff;
   font-weight: bold;
 }
 .arrow span {
@@ -39,8 +39,8 @@
 }
 /* Divider */
 .divider {
-  background: #DC143C;
-  background-image: url('/assets/images/banners/background-pattern.svg');
+  background: #5c0f6b;
+  background-image: url('/assets/images/banners/background-pattern-eliminatorias.svg');
   background-size: cover;
   height: 20px;
 }
@@ -69,7 +69,7 @@
 .line {
   width: 220px;
   height: 8px;
-  background: #DC143C;
+  background: #771379;
   transform: skew(50deg);
 }
 .logos {
